Solve ProfileIOData, Extension, HostContentSettingsMap ordering issue.

There's a chicken/egg/omelette(?) issue during set up:

* ProfilIOData needs to grab HostContentSettingsMap on creation, and it
can be used at any point after creation to create a URLRequestContext,
which can use the HostContentSettingsMap.
* ExtensionSystem needs to modify the HostContentSettingsMap before the
map is used.
* ExtensionSystem needs access to the URLRequestContextGetter, which
ProfileIOData creates, but needs the HostContentSettingsMap before it
can safely create it.

This CL just makes the ExtensionSystem method to hook into
HostContentSettingsMap static, and the map sets up the hook on
construction.  Since the method to set up hooks wasn't depending on any
members of the ExtensionSystem, this should just "work"

This bug has existed a while, but we never ran into DCHECKs as a
result because while the URLRequestContext was potentially being set
up with the HostContentSettingsMap was fully initialized, we generally
weren't issuing network requests until after the ExtensionSystem set
up the map.

https://codereview.chromium.org/2841163002/ changed that, since the
ProxyService may figure out it needs a PAC file and fetch it any time
after the URLRequestContext is created.

BUG=718835

Review-Url: https://codereview.chromium.org/2866613003
Cr-Commit-Position: refs/heads/master@{#471853}

Former-commit-id: ad5094aba23fb6260d618c3223bb22d2deb85d6f